RESOLVED FIXED139574
Temporarily use WebCore session storage for transient local storage
https://bugs.webkit.org/show_bug.cgi?id=139574
Summary Temporarily use WebCore session storage for transient local storage
Anders Carlsson
Reported 2014-12-11 18:41:04 PST
Temporarily use WebCore session storage for transient local storage
Attachments
Patch (2.73 KB, patch)
2014-12-11 18:44 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-12-11 18:44:34 PST
WebKit Commit Bot
Comment 2 2014-12-11 18:47:09 PST
Attachment 243172 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/Storage/StorageNamespaceImpl.h:26: #ifndef header guard has wrong style, please use: StorageNamespaceImpl_h [build/header_guard] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-12-11 18:49:46 PST
Note You need to log in before you can comment on or make changes to this bug.