Temporarily use WebCore session storage for transient local storage https://bugs.webkit.org/show_bug.cgi?id=139574

Reviewed by Dan Bernstein.

* WebProcess/Storage/StorageNamespaceImpl.h:
Change the header guard so it won't conflict with StorageNamespaceImpl.h in WebCore.

* WebProcess/Storage/WebStorageNamespaceProvider.cpp:
(WebKit::WebStorageNamespaceProvider::createTransientLocalStorageNamespace):
Use the WebCore session storage for now, to avoid crashes.

Canonical link: https://commits.webkit.org/157451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177205 268f45cc-cd09-0410-ab3c-d52691b4dbfc